<resources>
    <string name="app_name">Zalo App</string>
    <string name="phone_number">Phone number</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_to_Zalo">Login to continue</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="add_image">Add Image</string>
    <string name="select_user">Select User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>